--- a/vue/index.html
+++ b/vue/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="public/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goal Tritons</title>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-K04YGLRKRZ"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-K04YGLRKRZ');
+      </script>
   </head>
   <body>
     <div id="app"></div>
